Flip/recalc steep normals produces wrong result (gimbal lock?) #76025

Closed
opened 2020-04-23 20:33:21 +02:00 by Vyacheslav Kobozev · 8 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.59

Blender Version
Broken: version: 2.83 (sub 14), branch: master, commit date: 2020-04-23 08:25, hash: 8dedbb1747
Worked: (newest version of Blender that worked as expected)

Short description of error
When i flip or recalculate steep aligned normals i have not aligned result. Gimbal lock? Any way to avoid it?
2020-04-23_21-29-11.mp4
bad flip.blend
Exact steps for others to reproduce the error
take plane
subdivide simple 2 times
rotate normals to steep angle
flip or recalculate

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.59 **Blender Version** Broken: version: 2.83 (sub 14), branch: master, commit date: 2020-04-23 08:25, hash: `8dedbb1747` Worked: (newest version of Blender that worked as expected) **Short description of error** When i flip or recalculate steep aligned normals i have not aligned result. Gimbal lock? Any way to avoid it? [2020-04-23_21-29-11.mp4](https://archive.blender.org/developer/F8491332/2020-04-23_21-29-11.mp4) [bad flip.blend](https://archive.blender.org/developer/F8491333/bad_flip.blend) **Exact steps for others to reproduce the error** take plane subdivide simple 2 times rotate normals to steep angle flip or recalculate

Added subscriber: @Vyach

Added subscriber: @Vyach

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm, I'll check if I can figure out why.

I can confirm, I'll check if I can figure out why.
Sebastian Parborg self-assigned this 2020-04-24 13:30:18 +02:00

I've posted a fix D7528

I've posted a fix [D7528](https://archive.blender.org/developer/D7528)

@ZedDB Thank you!

@ZedDB Thank you!

This issue was referenced by 516e1b4031

This issue was referenced by 516e1b4031f8c13dd6764ac794734ad966c09f13

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76025
No description provided.